# atopile

./: .cursorrules  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .proxyrc.json  404.html  AGENTS.md  BASELINE.md  CLAUDE.md  CNAME  CONFLICT_RESOLUTION_PLAN.md  DOGFOOD_BUGS.md  Dockerfile  EXTENSION_PARITY_PLAN.md  FILE_WATCHER_PROPOSAL.md  IMPLEMENTATION.md  LICENSE  MANIFEST.in  MERGE_PLAN.md  MOVE_TO_FABLL.md  MULTIBOARD_CONNECTOR_PLAN.md  NOTES.ato  PLAN.md  PM.md  PROJECTS.md  PR_DEFERRED_CHANGES.md  README.md  REVIEW_feature_deeppcb.md  SIDEBAR_PARITY_PLAN.md  SKILL.md  TODO.md  WORKER_RESEARCH.md  ato_flow.drawio  atopile-custom-words.txt  bla.py  build_examples.py  (+41 more)
sandbox/ato_parser/: .gitignore  Cargo.toml  README.md  pyproject.toml
sandbox/ato_parser/.github/workflows/: CI.yml
sandbox/ato_parser/examples/: ast_visitor.py  basic_usage.py  error_handling.py  physical_quantities.py
sandbox/ato_parser/python/ato_parser/: __init__.py
sandbox/ato_parser/src/: ast.rs  error.rs  lib.rs  parser.rs  parser.rs.bk  python.rs  utils.rs
sandbox/ato_parser/src/parser/: basic.rs  block.rs  expression.rs  import.rs  mod.rs  operators.rs  physical.rs  statement.rs  utils.rs
sandbox/ato_parser/src/tests/: arithmetic_tests.rs  assignment_tests.rs  block_tests.rs  error_tests.rs  import_tests.rs  line_continuation_tests.rs  mixed_content_tests.rs  mod.rs  physical_tests.rs  statement_tests.rs
src/faebryk/core/: CMakeLists.txt  __init__.py  core.py  defaultsolver.py  edge_traversal.py  fabll.py  faebrykpy.py  graph.py  graph_export.py  graph_render.py  graphinterface.py  link.py  module.py  moduleinterface.py  node.py  parameter.py  pathfinder.py  pcb-graph-spec.md  pcbgraph.py  reference.py  sandbox.py  solver.py  trait.py  type.py  util.py
src/faebryk/core/cpp/: .clang-format  CMakeLists.txt  __init__.py  __init__.pyi  cpp_helpers.py
src/faebryk/core/cpp/include/: nano.hpp  perf.hpp  pyutil.hpp  util.hpp
src/faebryk/core/cpp/include/graph/: graph.hpp  graphinterfaces.hpp  links.hpp
src/faebryk/core/cpp/include/pathfinder/: bfs.hpp  pathcounter.hpp  pathfinder.hpp
src/faebryk/core/cpp/src/: main.cpp  perf.cpp
src/faebryk/core/cpp/src/graph/: graph.cpp  graphinterface.cpp  graphinterfaces.cpp  link.cpp  links.cpp  node.cpp  path.cpp  type.cpp
src/faebryk/core/cpp/src/pathfinder/: bfs.cpp  pathcounter.cpp  pathfinder.cpp
src/faebryk/core/graph_backends/: default.py  graphgt.py  graphig.py  graphnx.py  graphpy.py
src/faebryk/core/parameter/: __init__.py  future.py
src/faebryk/core/solver/: README.md  algorithm.py  analytical.py  canonical.py  defaultsolver.py  facts.py  literal_folding.py  mutator.py  nullsolver.py  solver.py  utils.py
src/faebryk/core/solver/symbolic/: canonical.py  expression_groups.py  expression_wise.py  invariants.py  pure_literal.py  rewrite.py  structural.py
src/faebryk/core/zig/: .gitignore  CMakeLists.txt  INTEGRATION.md  README.md  TESTS.md  TODO.md  __init__.py  __init__.pyi  analyze  build.zig  build.zig.zon  compute_hash.py  footprint.pyi  footprint_v5.pyi  fp_lib_table.pyi  netlist.pyi  pcb.pyi  schematic.pyi  symbol.pyi  symbol_v6.pyi
src/faebryk/core/zig/experiment/: __init__.py  __init__.pyi  build.zig  build.zig.zon  test_pyzig.py
src/faebryk/core/zig/experiment/src/: main.zig  pybindings.zig  python_ext.zig  pyzig.zig  root.zig
src/faebryk/core/zig/sexp/: ISSUES.md  build.zig  build.zig.zon  fp_lib_table.pyi
src/faebryk/core/zig/sexp/src/: ast.zig  sexp.zig  structure.zig  tokenizer.zig
src/faebryk/core/zig/sexp/test/: test_ast.zig  test_ast_2.zig  test_kicad.zig  test_layer_parsing.zig  test_location.zig  test_positional_debug.zig  test_struct_parsing.zig  test_structure.zig  test_textlayer.zig  test_tokenizer.zig  test_xyz.zig
src/faebryk/core/zig/src/: bool_sets.zig  numeric_sets.zig  test_runner.zig  units.zig
src/faebryk/core/zig/src/compat/: lib.zig  linked_list.zig
src/faebryk/core/zig/src/fabll/: collections.zig  expressions.zig  lib.zig  literals.zig  parameters.zig
src/faebryk/core/zig/src/faebryk/: TODO.md  collections.zig  composition.zig  edgebuilder.zig  expressions.zig  fabll.zig  interface.zig  lib.zig  linker.zig  literals.zig  new-pathfinder-review.md  new-pathfinder.zig  next.zig  node_type.zig  nodebuilder.zig  operand.zig  parameter.zig  parameters.zig  pathfinder.zig  pointer.zig  source.zig  trait.zig  type.zig  typegraph.zig  unit_resolver.zig  units.zig
src/faebryk/core/zig/src/graph/: build.zig  composition.zig  graph.zig  interface.zig  lib.zig  visitor.zig
src/faebryk/core/zig/src/python/: py.zig  pyi.zig
src/faebryk/core/zig/src/pyzig/: gen_pyi.zig  genstruct.zig  getset.zig  lib.zig  linked_list.zig  main.zig  mutable_list.zig  pybindings.zig  pyi.zig  python_ext.zig  pyzig.zig  type_registry.zig  util.zig
src/faebryk/core/zig/src/sexp/: ast.zig  bench.zig  lib.zig  panel_file_bench.zig  py.zig  pyi.zig  structure.zig  tokenizer.zig
src/faebryk/core/zig/src/step/: analyze.zig  ast.zig  lib.zig  parser.zig  queries.zig  tests.zig  tokenizer.zig  writer.zig
src/faebryk/core/zig/test/pyzig/: test_pyzig.py
src/faebryk/core/zig/test/sexp/: test_ast.zig  test_ast_2.zig  test_create.py  test_effects_value.zig  test_fp_lib.py  test_kicad.zig  test_load_pcb.py  test_mod.py  test_pcb copy.py  test_pcb.py  (+3 more)
src/faebryk/core/zig/zigpilled/: .gitignore  build.zig
tools/atopile_mkdocs_plugin/: plugin.py  pyproject.toml
web-ide/playground/: .gitignore  Caddyfile  Dockerfile  README.md  config.toml  deploy.sh  fly.spawner.toml  pyproject.toml  server.js
web-ide/playground/lib/: config.js  crypto.js  landing.html  machines.js  pool.js
web-ide/playground/playground_app/: config.py  fly_token.py
web-ide/playground/playground_app/server/: __init__.py  fly_machines.py  pool.py
web-ide/playground/playground_app/static/: dashboard.js
web-ide/playground/playground_app/templates/: dashboard.html
web-ide/playground/web/: tsconfig.json
web-ide/playground/web/src/: analytics.ts  dashboard.ts  main.ts
(+3953 files in other folders)
