[metadata]
name = faebryk
version = 1.0.0
author = ioannis_iteng
author_email = ioannis@iteng.nl
description = Open-source software-defined EDA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/faebryk/faebryk
project_urls =
    Bug Tracker = https://github.com/faebryk/faebryk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .
include = faebryk*
